<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc"
    tools:context=".GuidedWriting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/document"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="paragraph"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paragraph"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="dialog"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="composition"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/composition"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="story"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/story"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="informalEmail"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informal_emails"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="formalEmail"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formal_emails"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="formalLetter"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informal_letter"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="cv"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cv"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="formalLetter"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/application"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="businessLetter"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_letter"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <android.support.v7.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="complaintLetter"
            app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complaint_letter"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        

    </LinearLayout>

</ScrollView>